argocd/patches/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: HostRegexp(`{host:.+}`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: HostRegexp(`{host:.+}`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls: {}
